--- a/src/components/sections/Subscription/Subscription.scss
+++ b/src/components/sections/Subscription/Subscription.scss
@@ -48,4 +48,11 @@
     max-height: 100%;
     object-fit: cover;
   }
+
+  &_footer {
+    background-color: #dec7ab;
+    padding: 7px 15px;
+    margin-top: 60px;
+    text-align: center;
+  }
 }
