--- a/src/components/sections/ContactInfo/ContactInfo.scss
+++ b/src/components/sections/ContactInfo/ContactInfo.scss
@@ -2,6 +2,7 @@
   padding-bottom: 135px;
 
   &_content {
+    position: relative;
     display: flex;
     justify-content: space-between;
     margin-top: 65px;
@@ -22,5 +23,12 @@
       height: 25px;
       margin-left: 120px;
     }
+  }
+
+  &_linkToTop {
+    position: absolute;
+    bottom: 0;
+    right: 25px;
+    height: 75px;
   }
 }
