--- a/src/components/UI/Spinner/Spinner.scss
+++ b/src/components/UI/Spinner/Spinner.scss
@@ -1,9 +1,9 @@
 @keyframes round {
   0% {
-    transform: rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
 
@@ -12,6 +12,5 @@
   width: 300px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  animation: round 1.7s infinite linear;
+  animation: round 2s infinite linear;
 }
