--- a/src/components/sections/Subscription/Subscription.scss
+++ b/src/components/sections/Subscription/Subscription.scss
@@ -29,7 +29,7 @@
     padding-top: 38px;
     padding-left: 100px;
     padding-bottom: 50px;
-    padding-right: 200px;
+    width: 715px;
     height: 265px;
 
     h3 {
