--- a/src/components/sections/ContactForm/ContactForm.scss
+++ b/src/components/sections/ContactForm/ContactForm.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-height: 437px;
   }
 
   &_form {
@@ -21,6 +22,15 @@
 
     &::placeholder {
       color: #211a1e;
+      transition: all 0.25s ease;
+    }
+
+    &:focus {
+      outline: none;
+
+      &::placeholder {
+        color: #c3423f;
+      }
     }
 
     &:not(:first-of-type) {
