--- a/src/components/sections/ContactInfo/ContactInfo.scss
+++ b/src/components/sections/ContactInfo/ContactInfo.scss
@@ -17,6 +17,10 @@
       display: flex;
       align-items: center;
       color: #211a1e;
+
+      &:hover {
+        color: #c3423f;
+      }
     }
 
     img {
