--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ ul {
 
 button {
   border: none;
+  cursor: pointer;
 }
 
 a {
@@ -75,15 +76,17 @@ h5 {
 p,
 li,
 button,
-input {
+input,
+input::placeholder {
   font-size: 2.5rem;
   font-weight: 300;
   line-height: 2.9rem;
   letter-spacing: 0em;
 }
 
+input,
 button {
-  cursor: pointer;
+  font-family: "Raleway", sans-serif;
 }
 
 .slick-slider {
