--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./index.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -9,8 +11,6 @@ html {
 }
 
 body {
-  min-width: 1440px;
-  margin: auto;
   font-family: "Raleway", sans-serif;
   box-sizing: border-box;
   background-color: #efece9;
@@ -18,6 +18,14 @@ body {
 
 section {
   padding-top: 135px;
+
+  @include desktop-md {
+    padding-top: 80px;
+  }
+
+  @include tablet-md {
+    padding-top: 50px;
+  }
 }
 
 ul {
@@ -41,12 +49,29 @@ h2 {
   font-weight: 600;
   color: #211a1e;
 
+  @include tablet-md {
+    font-size: 5rem;
+  }
+
+  @include tablet-md {
+    font-size: 4rem;
+  }
+
   img {
     position: absolute;
     right: -60px;
     top: 50%;
     transform: translate(100%, -50%);
     height: 100px;
+
+    @include tablet-md {
+      right: -30px;
+      height: 70px;
+    }
+
+    @include mobile-md {
+      display: none;
+    }
   }
 }
 
@@ -56,6 +81,14 @@ h3 {
   line-height: 4.1rem;
   letter-spacing: 0em;
   color: #211a1e;
+
+  @include tablet-md {
+    font-size: 4rem;
+  }
+
+  @include tablet-md {
+    font-size: 3rem;
+  }
 }
 
 h4 {
@@ -71,6 +104,10 @@ h5 {
   line-height: 2.3rem;
   letter-spacing: 0em;
   color: #211a1e;
+
+  @include tablet-sm {
+    font-size: 1.8rem;
+  }
 }
 
 p,
@@ -82,6 +119,14 @@ input::placeholder {
   font-weight: 300;
   line-height: 2.9rem;
   letter-spacing: 0em;
+
+  @include desktop-sm {
+    font-size: 2rem;
+  }
+
+  @include tablet-md {
+    font-size: 1.8rem;
+  }
 }
 
 input,
@@ -191,8 +236,8 @@ button {
 }
 
 $slick-arrow-color: #000 !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
+$slick-prev-character: url("/assets/img/arrow.svg") !default;
+$slick-next-character: url("/assets/img/arrow.svg") !default;
 
 /* Arrows */
 
@@ -227,6 +272,7 @@ $slick-next-character: "\2192" !default;
 
 .slick-prev {
   left: 25px;
+  transform: rotate(-90deg);
 
   &:before {
     content: $slick-prev-character;
@@ -235,6 +281,7 @@ $slick-next-character: "\2192" !default;
 
 .slick-next {
   right: 25px;
+  transform: rotate(90deg);
 
   &:before {
     content: $slick-next-character;
@@ -253,6 +300,10 @@ $slick-next-character: "\2192" !default;
 
     &:not(:last-of-type) {
       margin-right: 30px;
+
+      @include tablet-md {
+        margin-right: 15px;
+      }
     }
   }
 }
