--- a/src/hoc/Wrapper/Wrapper.scss
+++ b/src/hoc/Wrapper/Wrapper.scss
@@ -8,7 +8,7 @@
     width: calc(100% - 50px);
   }
 
-  @include tablet-sm {
-    width: calc(100% - 20px);
-  }
+  // @include tablet-sm {
+  //   width: calc(100% - 40px);
+  // }
 }
