Change map language, make minor edits in text

--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -34,6 +34,10 @@
     @include mobile-lg {
       max-height: 350px;
     }
+
+    @include mobile-md {
+      max-height: 450px;
+    }
   }
 
   &_button {
